fixes #21, solving contrast issue on contact page

--- a/style.css
+++ b/style.css
@@ -735,6 +735,14 @@ h1 {
   color: white;
 }
 
+#bloc-6 h1 {
+  color: black;
+}
+
+#bloc-6 p {
+  color: black;
+}
+
 h4 {
   color: #333333 !important;
 }
